# truck

./: .bazelignore  .clang-format  .clang-tidy  .cmake-format.py  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .tmux.conf  .yamllint-config.yaml  Dockerfile  Makefile  README.md  WORKSPACE  docker-compose.yaml  entrypoint.bash  lidar-net.yaml  lint_log.txt  local-playbook.yaml  macvlan.yaml  platformio.ini  pointmatcher-run1-iterationInfo.csv  pyproject.toml  requirements.txt  robot_localization_debug.txt  ros_setup.bash  testfile
.dvc/: config
.github/workflows/: test.yml
CDT-RRT*/: info.json  main.cpp  primitives.cpp  primitives.h  statespace_tree.h  viz.py  workspace_tree.cpp  workspace_tree.h  wstree.h
controller/: Pipfile  config.yaml  pyproject.toml
controller/backend/: common.py  gamepad.py  hardware.py  helpers.py  server.py
controller/frontend/: index.html  package-lock.json  package.json  vite.config.js
dep/: galactic.BUILD
doc/: Makefile  README.md  ackermann_vehicle.md  foxglove.md  gearbox.md  getting_started.md  nodes_and_topics.md  remote_control.md  ssh.md  writing_controller.md
doc/tex/: ackermann_vehicle.tex
docker/: Dockerfile.amd64  README.md  truck-amd64.dockerfile  truck-base-amd64.dockerfile  truck-base-jetson.dockerfile  truck-jetson.dockerfile
firmware/: STM32G431CBUx_FLASH.ld  f411.ioc  link_options.py  platformio.ini  truck_hw.ioc
firmware/include/: as5047p.h  body.h  frames.h  gpio.h  hal_conf_custom.h  magnetic_encoder_spi.h  serial.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  time.h
layout/: camera_view.json  demo.json  pure_pursuit.json
layouts/: main.json
odometry_scripts/: aruco.py  calibrate.py  compare_aruco.py  grid.py  grid2.py  odom.py  plot.py  test_aruco.py
patch/: gzweb.patch  sllidar.patch
perception/: .env.example  .gitignore  README.md  README.md~  config.py  frames_from_mp4.py  frames_from_mp4.py~  insv_metadate.py  pipeline.py  private_config.py  requirements.txt  timestamp.py
planning/node/: BUILD  package.xml
planning/node/src/: main.cpp
primitives/: Generate_primitives.ipynb  out.json  primitives.ipynb  primitives.json
robot/: package.xml  setup.py
rs2_node/: CMakeLists.txt  main.cpp  package.xml
scripts/: install_pydeps.py  joyfix.sh  pub.sh  rosenv.sh  start.sh  sync_pydeps.py
servo-test/: .gitignore  mcaplog.py  platformio.ini  pyproject.toml  requirements.txt  tester.py
servo-test/src/: ADS1115.h  adc.cpp  adc.hpp  encoder.hpp  main.cpp
setup/: README.md  jetson.sh  pydeps.yaml
(+120 files in other folders)
